// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders correctly with no providers 1`] = `
<div
  aria-busy="false"
  aria-expanded="false"
  class="ui item simple dropdown"
  data-test="loginMenu"
  role="listbox"
  tabindex="0"
>
  <div
    aria-live="polite"
    class="text"
    role="alert"
  >
    Log In
  </div>
  <i
    aria-hidden="true"
    class="dropdown icon"
  />
  <div
    class="menu transition"
  />
</div>
`;

exports[`Renders correctly with some providers 1`] = `
<div
  aria-busy="false"
  aria-expanded="false"
  class="ui item simple dropdown"
  data-test="loginMenu"
  role="listbox"
  tabindex="0"
>
  <div
    aria-live="polite"
    class="text"
    role="alert"
  >
    Log In
  </div>
  <i
    aria-hidden="true"
    class="dropdown icon"
  />
  <div
    class="menu transition"
  >
    <div
      class="item"
      data-provider="google"
      role="option"
    >
      <i
        aria-hidden="true"
        class="google icon"
      />
      <span
        class="text"
      >
        Google
      </span>
    </div>
    <div
      class="item"
      data-provider="twitter"
      role="option"
    >
      <i
        aria-hidden="true"
        class="twitter icon"
      />
      <span
        class="text"
      >
        Twitter
      </span>
    </div>
  </div>
</div>
`;
